fix task schedule logic, update docs
- update readme and postman collection